--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h2, h5 {
 }
 
 header {
-    background-image: url("g-background.png");
+    background-image: url("g-background.webp");
     background-attachment: fixed;
     background-size: cover;
     text-align: center; 
@@ -284,7 +284,7 @@ main {
     text-align: center;
     background-attachment: fixed;
     background-size: cover;
-    background-image: url("second-background.png");
+    background-image: url("second-background.webp");
     color: white;
     image-rendering: auto;
 }
