--- a/style.css
+++ b/style.css
@@ -138,6 +138,7 @@ h2, h5 {
 header {
     background-image: url("g-background.png");
     background-attachment: fixed;
+    display: table;
     background-size: cover;
     text-align: center; 
     margin-bottom: 30px;
