--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ header img {
     width: 100%;
     max-width: 900px; 
     height: auto;
-    margin-top 10%;
+    margin-top: 10%;
 }
 
 .cont-sc {
