--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h2, h5 {
 }
 
 header {
-    background-image: url("g-background.png");
+    background-image: url("g-background.jpg");
     background-position: center;
     background-attachment: fixed;
     display: table;
