--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-html {
-    scroll-behavior: smooth;
-}
-
 @font-face {
     font-family: '8bitOperatorPlus-Regular';
     src: url("8bitOperatorPlus-Regular.ttf");
@@ -59,80 +55,6 @@ body {
 
 h2, h5 {
     font-weight: 300;
-}
-
-@keyframes toUp {
-    from {
-        opacity: 0;
-        transform: translateY(100px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0px);
-    } 
-}
-
-@keyframes toUpFix {
-    from {
-        opacity: 0;
-        transform: translateY(100px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0px);
-    } 
-}
-
-@keyframes toSize {
-    0% {
-        transform: scale(1.2, 1.2);
-    }
-    100% {
-        transform: scale(1, 1);
-    }
-}
-
-@keyframes toRight {
-    0% {
-        transform: translateX(-200px);
-    }
-    100% {
-        transform: translateX(0px);
-    }
-}
-
-@keyframes toLeft {
-    0% {
-        transform: translateX(200px);
-    }
-    100% {
-        transform: translateX(0px);
-    }
-}
-
-.toLeft {
-    animation: toLeft 1s;
-}
-
-.toRight {
-    animation: toRight 1s;
-}
-
-.toSize {
-    animation: toSize 0.5s;
-}
-
-.toUp {
-    animation: toUp 1.5s;
-}
-
-.fixRot {
-    animation: toUpFix 1.5s;
-}
-
-.animado {
-    opacity: 0;
-    transition: all 0.5s;
 }
 
 header {
@@ -227,6 +149,7 @@ header input:focus {
 
 main {
     text-align: center;
+    overflow: hidden;
 }
 
 .alignCenter-iframe {
@@ -735,8 +658,6 @@ span a:active {
         -ms-transform: scale(1.09);
         -o-transform: scale(1.09);
         transform: scale(1.09);
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
     }
 
     .second-screenshot img {
@@ -745,10 +666,6 @@ span a:active {
         -ms-transform: none;
         -moz-transform: none;
         -webkit-transform: none;
-    }
-
-    .fixRot {
-        animation: none;
     }
     
     .alignCenter-iframe {
@@ -769,8 +686,6 @@ span a:active {
         width: 100%;
         height: auto;
         margin: 0;
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
     }
 
     .second-screenshot {
@@ -800,22 +715,15 @@ span a:active {
     }
     
     .align1 {
-        display: block;
         text-align: center;
         margin-right: 0;
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
+        flex-direction: column-reverse;
     }
 
     .align2 {
-        display: block;
         margin: 0 auto;
         text-align: center; 
-    }
-
-    .bloque1 {
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
+        flex-direction: column;
     }
 
     footer {
@@ -875,13 +783,6 @@ span a:active {
         -ms-transform: scale(1.09);
         -o-transform: scale(1.09);
         transform: scale(1.09);
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
-    }
-    
-    
-    .fixRot {
-        animation: none;
     }
 
     .alignCenter-iframe {
@@ -902,8 +803,6 @@ span a:active {
         width: 100%;
         height: auto;
         margin: 0;
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
     }
 
     .second-screenshot {
@@ -933,23 +832,15 @@ span a:active {
     }
     
     .align1 {
-        display: block;
         text-align: center;
         margin-right: 0;
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
-        
+        flex-direction: column-reverse;
     }
 
     .align2 {
-        display: block;
         margin: 0 auto;
         text-align: center; 
-    }
-
-    .bloque1 {
-        -webkit-transform: rotate(-180deg);
-        transform: rotate(-180deg);
+        flex-direction: column;
     }
 
     footer {
